--- a/style.css
+++ b/style.css
@@ -11,13 +11,29 @@ body {
     align-items: center;
 }
 
+h2 {
+    padding: 2em;
+}
+
 .boardcontainer {
     background-color:rgb(219, 147, 123);
-    width: 600px;
+    width: 300px;
     min-height: 200px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 1em 1em;
+    border: 1px solid black;
+    text-align: center;
+    text-justify: center;
+    align-items: center;
+
 }
 
+.boardcontainer > p {
+    border: 2px solid blue;
+    min-height: 50px;
+    min-width: 50px;
+    height: 60px;
+    width: 60px;
+}
