--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ h2 {
     text-align: center;
 }
 
+.formcontainer {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+}
+
 .boardcontainer {
     background-color:rgb(219, 147, 123);
     width: 300px;
@@ -50,4 +56,12 @@ h2 {
     min-width: 50px;
     height: 60px;
     width: 60px;
+}
+
+button {
+    margin: 1em;
+}
+
+.hidden {
+    display: none;
 }
