--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h2 {
     display: flex;
     flex-direction: row;
     align-content: center;
+    background-color: floralwhite;
+    height: 250px;
+    box-shadow: 0 0.5rem 1rem rgba(173, 132, 132, 0.473) ;
+    border-radius: 5px;
 }
 
 .player1container, .player2container {
@@ -38,24 +42,31 @@ h2 {
 .boardcontainer {
     background-color:rgb(219, 147, 123);
     width: 300px;
-    min-height: 200px;
+    min-height: 0px;
+    height: 200px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 1em 1em;
-    border: 1px solid black;
+    gap: 8px;
+    /* border: 1px solid black; */
     text-align: center;
     text-justify: center;
     align-items: center;
+    align-self: center;
 
 }
 
 .boardcontainer > p {
-    border: 2px solid blue;
+    background-color:floralwhite;
     min-height: 50px;
     min-width: 50px;
-    height: 60px;
-    width: 60px;
+    height: 62px;
+    width: 62px;
+    line-height: 60px;
+    white-space: nowrap;
+    font-size: 50px;
+    font-family:sans-serif;
+    font-weight: 900;
 }
 
 button {
@@ -64,4 +75,10 @@ button {
 
 .hidden {
     display: none;
+}
+
+.gameresult {
+    font-family: sans-serif;
+    font-size: 2em;
+    padding-bottom: 20px;
 }
