--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body {
 }
 
 h2 {
-    padding: 2em;
+    padding: 1em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
 }
 
 .gamecontainer {
@@ -31,6 +33,10 @@ h2 {
     width: 100%;
     padding: 1em;
     text-align: center;
+    font-family:sans-serif;
+    font-size: 20px;
+    margin: 10px;
+    line-height: 40px;
 }
 
 .formcontainer {
@@ -70,7 +76,13 @@ h2 {
 }
 
 button {
-    margin: 1em;
+    margin: 0.25em;
+    background-color: rgb(240, 232, 218);
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 4px;
+    border-color: rgba(173, 132, 132, 0.473);
+    box-shadow: 0 0.25rem 0.5rem rgba(173, 132, 132, 0.473);
 }
 
 .hidden {
@@ -80,5 +92,14 @@ button {
 .gameresult {
     font-family: sans-serif;
     font-size: 2em;
-    padding-bottom: 20px;
+    margin: 10px;
+}
+
+input {
+    border: 1px solid rgba(173, 132, 132, 0.473);
+    background-color: floralwhite;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 8px;
+    
 }
