--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ h2 {
     display: flex;
     flex-direction: column;
     padding: 1em;
+    margin-top: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .boardcontainer {
