--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h2 {
     height: 250px;
     box-shadow: 0 0.5rem 1rem rgba(173, 132, 132, 0.473) ;
     border-radius: 5px;
+    margin-bottom: 25px;
 }
 
 .player1container, .player2container {
@@ -43,7 +44,6 @@ h2 {
     display: flex;
     flex-direction: column;
     padding: 1em;
-    margin-top: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
